--- a/public/admin/css/common.less
+++ b/public/admin/css/common.less
@@ -1,8 +1,123 @@
 body {
     background-color: #000;
+    padding-left: 180px;
+    transition: all 1s;
+    &.active {
+        padding-left: 0;
+    }
 }
 .container {
     .panel {
         margin-top: 150px;
     }
 }
+// 主页面
+html,body{
+    height: 100%;
+}
+ul,ol {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+a {
+    display: block;
+    text-decoration: none;
+}
+a:link,
+a:visited,
+a:hover,
+a:active {
+    text-decoration: none;
+}
+img {
+    display: block;
+}
+.le_aside {
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: #222d32;
+    width: 180px;
+    height: 100%;
+    z-index: 999;
+    transition: all 1s;
+    &.active {
+        left: -180px;
+    }
+    .brand {
+        a {
+            height: 50px;
+            background-color: #367fa9;
+            text-align: center;
+            line-height: 50px;
+            font-size: 24px;
+            color: #fff;
+        }
+    }
+    .userInfo {
+        height: 150px;
+        img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            margin: 30px auto 0;
+        }
+        p {
+            font-size: 16px;
+            color: #fff;
+            height: 40px;
+            line-height: 40px;
+            text-align: center; 
+        }
+    }
+    .nav {
+        ul {
+            a {
+                height: 40px;
+                line-height: 40px;
+                color: #ccc;
+                padding-left: 30px;
+                border: 3px solid transparent;
+            }
+            .subnav {
+                >a {
+                    padding-left: 50px;
+                }
+            }
+            a.active {
+                color: #fff;
+                border-left-color: #069;
+                background-color: #1d1f21;
+            }
+        }
+    }
+}
+.le_main {
+    height: 100%;
+    width: 100%;
+    background-color:#fff;
+    .header {
+        height: 50px;
+        background-color: #3c8dbc;
+        width: 100%;
+        position: fixed;
+        right: 0;
+        padding-top: 15px;
+        padding-right: 20px;
+        padding-left: 200px;
+        z-index: 998;
+        transition: all 1s;
+        &.active {
+            padding-left: 20px;
+        }
+        a {
+            font-size: 16px;
+            color: #fff;
+        }
+    }
+    .container-fluid {
+        padding-top: 70px;
+    }
+}
+
