PC子页面初始化完成

--- a/public/admin/css/common.css
+++ b/public/admin/css/common.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #000;
   padding-left: 180px;
   transition: all 1s;
 }
@@ -110,4 +109,14 @@ img {
 }
 .le_main .container-fluid {
   padding-top: 70px;
+}
+.le_main .container-fluid .le_main_content .echart_left {
+  width: 45%;
+  height: 400px;
+  background-color: yellowgreen;
+}
+.le_main .container-fluid .le_main_content .echart_right {
+  width: 45%;
+  height: 400px;
+  background-color: #069;
 }
