--- a/public/admin/css/common.less
+++ b/public/admin/css/common.less
@@ -1,5 +1,5 @@
 body {
-    background-color: #000;
+    // background-color: #000;
     padding-left: 180px;
     transition: all 1s;
     &.active {
@@ -118,6 +118,18 @@ img {
     }
     .container-fluid {
         padding-top: 70px;
+        .le_main_content {
+            .echart_left {
+                width: 45%;
+                height: 400px;
+                background-color: yellowgreen;
+            }
+            .echart_right {
+                width: 45%;
+                height: 400px;
+                background-color: #069;
+            }
+        }
     }
 }
 
