--- a/public/admin/css/common.less
+++ b/public/admin/css/common.less
@@ -118,6 +118,8 @@ img {
     }
     .container-fluid {
         padding-top: 70px;
+        width: 100%;
+        height: 100%;
         .le_main_content {
             .echart_left {
                 width: 45%;
@@ -128,6 +130,15 @@ img {
                 width: 45%;
                 height: 400px;
                 background-color: #069;
+            }
+            table.table {
+                .table-striped {
+                   tr {
+                       td {
+                        vertical-align: middle;
+                       }
+                   }
+                }
             }
         }
     }
