--- a/public/admin/css/common.less
+++ b/public/admin/css/common.less
@@ -12,6 +12,9 @@ body {
     }
 }
 // 主页面
+.marginBottom () {
+    margin-bottom: 20px;
+}
 html,body{
     height: 100%;
 }
@@ -120,6 +123,16 @@ img {
         padding-top: 70px;
         width: 100%;
         height: 100%;
+        ol {
+            li {
+                a {
+                    display: inline-block;
+                }
+            }
+        }
+        .btn-add {
+            .marginBottom();
+        }
         .le_main_content {
             .echart_left {
                 width: 45%;
