商品二级分类完成

--- a/public/admin/css/common.css
+++ b/public/admin/css/common.css
@@ -131,3 +131,6 @@ img {
 .le_main .container-fluid .le_main_content table.table .table-striped tr td {
   vertical-align: middle;
 }
+.le_main .container-fluid .le_main_content table.table .table-striped tr td img {
+  margin: 0 auto;
+}
