--- a/public/admin/css/common.less
+++ b/public/admin/css/common.less
@@ -33,6 +33,7 @@ a:hover,
 a:active {
     text-decoration: none;
 }
+
 img {
     display: block;
 }
@@ -149,6 +150,9 @@ img {
                    tr {
                        td {
                         vertical-align: middle;
+                        img {
+                            margin: 0 auto;
+                        }
                        }
                    }
                 }
