商品管理页面完成

--- a/public/admin/css/common.less
+++ b/public/admin/css/common.less
@@ -98,7 +98,7 @@ img {
     }
 }
 .le_main {
-    height: 100%;
+    // height: 100%;
     width: 100%;
     background-color:#fff;
     .header {
@@ -122,8 +122,6 @@ img {
     }
     .container-fluid {
         padding-top: 70px;
-        width: 100%;
-        height: 100%;
         ol {
             li {
                 a {
@@ -159,5 +157,10 @@ img {
             }
         }
     }
+   
 }
-
+.img_box {
+    img {
+        display: inline-block;
+    }
+}
