--- a/public/admin/css/common.css
+++ b/public/admin/css/common.css
@@ -84,7 +84,6 @@ img {
   background-color: #1d1f21;
 }
 .le_main {
-  height: 100%;
   width: 100%;
   background-color: #fff;
 }
@@ -109,8 +108,6 @@ img {
 }
 .le_main .container-fluid {
   padding-top: 70px;
-  width: 100%;
-  height: 100%;
 }
 .le_main .container-fluid ol li a {
   display: inline-block;
@@ -133,4 +130,7 @@ img {
 }
 .le_main .container-fluid .le_main_content table.table .table-striped tr td img {
   margin: 0 auto;
+}
+.img_box img {
+  display: inline-block;
 }
