--- a/public/m/less/commo.less
+++ b/public/m/less/commo.less
@@ -123,3 +123,21 @@ img {
         
     }
 }
+.lt_search {
+    padding: 10px;
+    position: relative;
+    .search_input {
+        height: 34px;
+        border: 1px solid #007aff;
+        line-height: 34px;
+        font-size: 12px;
+        border-radius: 5px;
+        margin: 0;
+    }
+    button {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        border-radius: 0 5px 5px 0;
+    }
+}
